# argo

./: Argo.hs  CHANGELOG.md  LICENSE  argo.cabal  pkg.nix  readme.md
.github/workflows/: nix.yml
